# imgw-data-loader

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/imgw_data/: __init__.py  consts.py  get.py  stations.py
src/imgw_data/export/: export.py
src/imgw_data/utils/: parse.py  translate.py  urljoin.py
tests/: test_get_station_coordinates.py  test_get_station_elevation.py  test_load.py
